# swagger.yaml
@@ -155,6 +155,7 @@ definitions:
       created_at:
         description: Time at which the instance was created in the database
         format: date-time
+        readOnly: true
         type: string
         x-go-name: CreatedAt
       name:
@@ -178,6 +179,7 @@ definitions:
       updated_at:
         description: Time at which the student instance was last updated in the database
         format: date-time
+        readOnly: true
         type: string
         x-go-name: UpdatedAt
     required:
@@ -264,8 +266,7 @@ paths:
     put:
       consumes:
       - application/json
-      description: Updates a student if it exists in the database, otherwise creates
-        a new entry
+      description: Updates the student if it exists, otherwise creates a new entry
       operationId: updateStudent
       parameters:
       - description: The roll number of the student
@@ -274,6 +275,13 @@ paths:
         required: true
         type: string
         x-go-name: Roll
+      - description: The student which is to be updated
+        in: body
+        name: student
+        required: true
+        schema:
+          $ref: '#/definitions/Student'
+        x-go-name: Student
       produces:
       - application/json
       responses:
@@ -283,9 +291,6 @@ paths:
           $ref: '#/responses/ErrorResponse'
       schemes:
       - http
-      security:
-      - bearerAuth:
-        - '[]'
       tags:
       - students
 produces:
